# server

./: .gitignore  Cargo.toml  Dockerfile  README.md  build.rs  config-sample.toml  docker-compose.yml
.github/workflows/: build.yml  deploy.yml
docs/: matrixbird.service  nginx-reverse-proxy  nginx.config  systemd-example.service
migrations/: 20250215072455_invites.down.sql  20250215072455_invites.up.sql  20250216175239_emails.down.sql  20250216175239_emails.up.sql  20250217135603_users.down.sql  20250217135603_users.up.sql  20250226205837_events.down.sql  20250226205837_events.up.sql  20250319074517_access_tokens.down.sql  20250319074517_access_tokens.up.sql
src/: api.rs  appservice.rs  auth.rs  cache.rs  config.rs  crypto.rs  db.rs  domain.rs  email.rs  error.rs  hook.rs  lib.rs  main.rs  middleware.rs  ping.rs  rooms.rs  server.rs  session.rs  tasks.rs  templates.rs  utils.rs
src/admin/: mod.rs
src/api/: mod.rs
src/appservice/: mod.rs
src/auth/: auth.rs  login.rs  mod.rs  signup.rs
src/cache/: mod.rs
src/config/: generate.rs  mod.rs
src/crypto/: mod.rs
src/db/: access_tokens.rs  emails.rs  events.rs  invites.rs  mod.rs  users.rs
src/domain/: mod.rs
src/email/: email.rs  incoming.rs  mailer.rs  mod.rs  parse.rs  providers.rs  service.rs
src/error/: mod.rs
src/handlers/: email.rs  features.rs  mod.rs  ping.rs
src/handlers/auth/: auth.rs  login.rs  mod.rs  password.rs  signup.rs
src/hook/: mod.rs
src/ping/: mod.rs
src/server/: lmtp.rs  middleware.rs  mod.rs
src/session/: mod.rs
src/storage/: mod.rs
src/tasks/: mod.rs  user.rs
src/templates/: mod.rs
src/utils/: mod.rs
templates/: auto_reply.html  base_standard_email.html  verification_code.html  welcome_email.html  welcome_matrix.html  what_is_matrixbird.html
