[package]
name = "matrixbird"
version = "0.1.0"
authors = ["ChurchOfTheSubgenius <mail@hummingbard.com>"]
edition = "2024"

[dependencies]
ammonia = "4.0.0"
anyhow = "1.0.93"
async-trait = "0.1.86"
axum = { version = "0.7.9", features = ["macros"] }
axum-extra = { version = "0.10.0", features = ["typed-header"] }
bcrypt = "0.17.0"
chrono = { version = "0.4.39", features = ["serde"] }
clap = { version = "4.5.23", features = ["derive"] }
headers = "0.4.0"
http = "1.1.0"
hyper = { version = "1.5.1", features = ["full"] }
hyper-util = { version = "0.1.10", features = ["client", "client-legacy", "http2"] }
lettre = { version = "0.11.12", features = ["tokio1", "tokio1-native-tls"] }
log = "0.4.25"
mailchecker = "6.0.15"
once_cell = "1.20.2"
rand = "0.9.0"
redis = { version = "0.27.5", features = ["tokio-comp"] }
regex = "1.11.1"
reqwest = { version = "0.12.9", features = ["json"] }
ruma = { version = "0.11.1", features = ["appservice-api-c", "client-hyper-native-tls", "client-api-c", "client-ext-client-api", "rand", "unstable-exhaustive-types"] }
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
sqlx = { version = "0.8.3", features = ["runtime-tokio", "postgres", "time", "chrono", "tls-native-tls"] }
tera = "1.20.0"
thiserror = "2.0.3"
tokio = { version = "1.41.1", features = ["full"] }
toml = "0.8.19"
tower = "0.5.1"
tower-http = { version = "0.6.2", features = ["cors", "normalize-path", "trace"] }
tracing = "0.1.40"
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
uuid = { version = "1.11.0", features = ["v4"] }
